samples/_failures_safe/1761544078_0abc6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_896536af.c: In function ‘main’:
./samples/SAFE/__tmp_896536af.c:154:20: error: expected ‘]’ at end of input
  154 |         input[len-1
      |                    ^
      |                    ]
./samples/SAFE/__tmp_896536af.c:154:9: error: expected declaration or statement at end of input
  154 |         input[len-1
      |         ^~~~~
./samples/SAFE/__tmp_896536af.c:154:9: error: expected declaration or statement at end of input
